--- a/requirements.txt
+++ b/requirements.txt
@@ -9,22 +9,21 @@ coverage==7.6.1
 dict2obj==1.2.0
 ecdsa==0.18.0
 exceptiongroup==1.1.3
-fastapi==0.103.0
-greenlet==2.0.2
+greenlet==3.1.1
 h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-numpy==1.24.4
+numpy==2.2.3
 packaging==24.2
 pandas==2.0.3
 Pillow==10.0.0
 pluggy==1.5.0
 pyasn1==0.5.0
 pydantic==2.3.0
-pydantic-core==2.6.3
 pydantic-settings==2.0.3
+pydantic_core==2.6.3
 PyMySQL==1.1.0
 pypng==0.20220715.0
 pytest==8.3.4
@@ -45,7 +44,7 @@ SQLAlchemy==2.0.20
 starlette==0.27.0
 tabulate==0.9.0
 tomli==2.2.1
-typing-extensions==4.7.1
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
 uvicorn==0.23.2
