--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.5.0
 anyio==4.0.0
+cards==2.0.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -14,7 +15,9 @@ h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 Jinja2==3.1.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+mdurl==0.1.2
 numpy==2.2.3
 packaging==24.2
 pandas==2.0.3
@@ -24,6 +27,7 @@ pyasn1==0.5.0
 pydantic==2.3.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
+Pygments==2.19.1
 PyMySQL==1.1.0
 pypng==0.20220715.0
 pytest==8.3.4
@@ -37,13 +41,16 @@ python-multipart==0.0.6
 pytz==2023.3
 qrcode==7.4.2
 requests==2.31.0
+rich==13.5.2
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.20
 starlette==0.27.0
 tabulate==0.9.0
+tinydb==4.8.0
 tomli==2.2.1
+typer==0.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
